# nuit-info-admin

./: .gitignore  Cargo.toml  LICENSE  build.rs
.github/workflows/: rust.yml
migrations/2021-12-02-185800_initial/: down.sql  up.sql
migrations/2021-12-02-234049_sessions/: up.sql
src/: main.rs  ructe.rs  schema.rs
src/model/: mod.rs
src/routes/: account.rs  admin.rs  mod.rs
templates/: base.rs.html  base_sidebar.rs.html
templates/account/: login.rs.html
templates/sidebar/: articles.rs.html  contributions.rs.html  dashboard.rs.html
